--- a/Planet-Service/pom.xml
+++ b/Planet-Service/pom.xml
@@ -36,6 +36,11 @@
 	      <artifactId>spring-cloud-starter-consul-discovery</artifactId>
 	      <version>3.1.2</version>
 	    </dependency>
+	    <dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-aop</artifactId>
+  <version>2.4.1</version>
+</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -52,6 +57,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
