--- a/Planet-Service/pom.xml
+++ b/Planet-Service/pom.xml
@@ -47,10 +47,15 @@
 	      <version>3.1.2</version>
 	    </dependency>
 	    <dependency>
-  <groupId>org.springframework.boot</groupId>
-  <artifactId>spring-boot-starter-aop</artifactId>
-  <version>2.4.1</version>
-</dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-aop</artifactId>
+		  <version>2.4.1</version>
+		</dependency>
+		 <dependency>
+	      <groupId>io.micrometer</groupId>
+	      <artifactId>micrometer-registry-prometheus</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -66,8 +71,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-config-client -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-config-client</artifactId>
+		    <version>3.1.3</version>
+		</dependency>
+
 	</dependencies>
-	
 
 	<build>
 		<plugins>
