--- a/Planet-Service/src/main/resources/application.yml
+++ b/Planet-Service/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: ${random.int[8000,9000]}
-  
+
+
 spring:
   h2:
     console: 
@@ -16,3 +17,18 @@ spring:
     defer-datasource-initialization: true 
   application:
     name: Planet-Service
+
+  config:
+    import:
+    - optional:configserver:http://localhost:8888
+  profiles:
+    active:
+    - dev
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - prometheus
+        - info
+        - health
