Adding Spring topics

--- a/Aggregator-Service/src/main/resources/application.yml
+++ b/Aggregator-Service/src/main/resources/application.yml
@@ -31,6 +31,15 @@ resilience4j.retry: #Used to define how to react to a circuit break, how many at
 #resilience4j.ratelimiter:
 #
 #resilience4j.timelimiter:
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - prometheus
+        - info
+        - health
           
 server:
   port: 5050
