--- a/Aggregator-Service/pom.xml
+++ b/Aggregator-Service/pom.xml
@@ -34,14 +34,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
 		</dependency>
-		
-
-		
-<dependency>
-  <groupId>org.springframework.boot</groupId>
-  <artifactId>spring-boot-starter-aop</artifactId>
-  <version>2.4.1</version>
-</dependency>
+		<dependency>
+	      <groupId>io.micrometer</groupId>
+	      <artifactId>micrometer-registry-prometheus</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-aop</artifactId>
+		  <version>2.4.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
