--- a/Consumer-service/pom.xml
+++ b/Consumer-service/pom.xml
@@ -50,22 +50,22 @@
 		    <artifactId>resilience4j-circuitbreaker</artifactId>
 		    <version>1.7.0</version>
 		</dependency>
-
 		<dependency>
-  <groupId>org.springframework.boot</groupId>
-  <artifactId>spring-boot-starter-aop</artifactId>
-  <version>2.4.1</version>
-</dependency>
-		
+	      <groupId>io.micrometer</groupId>
+	      <artifactId>micrometer-registry-prometheus</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-aop</artifactId>
+		  <version>2.4.1</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-actuator</artifactId>
 		    <version>2.7.4</version>
 		</dependency>
-		
-		
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
