--- a/Consumer-service/src/main/resources/application.yml
+++ b/Consumer-service/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8020
+  
 
 spring:
   application:
@@ -19,3 +20,11 @@ resilience4j:
         max-attempts: 3
         wait-duration: 3s   # This will tell resilience4J to wait 5 seconds before trying again 
         
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - prometheus
+        - info
+        - health
