--- a/Spring-Cloud-Config-Server/pom.xml
+++ b/Spring-Cloud-Config-Server/pom.xml
@@ -34,6 +34,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
 		</dependency>
+		<dependency>
+	      <groupId>io.micrometer</groupId>
+	      <artifactId>micrometer-registry-prometheus</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
