--- a/Spring-Cloud-Config-Server/src/main/resources/application.properties
+++ b/Spring-Cloud-Config-Server/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.application.name=cloud-config-server
 
 spring.cloud.config.server.git.uri=https://github.com/MicroservicesPrimer2210/Spring-Config-Location
 spring.cloud.config.server.git.clone-on-start=true 
+management.endpoints.web.exposure.include=*
