--- a/Spring-Cloud-Config-Server/src/main/resources/application.properties
+++ b/Spring-Cloud-Config-Server/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.application.name=cloud-config-server
 spring.cloud.config.server.git.uri=https://github.com/MicroservicesPrimer2210/Spring-Config-Location
 spring.cloud.config.server.git.clone-on-start=true 
 management.endpoints.web.exposure.include=*
+
+spring.cloud.consul.host=http://discovery
+spring.cloud.consul.port=8500
