--- a/Cloud-Gateway/src/main/resources/application.yml
+++ b/Cloud-Gateway/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 
 
 spring:
+  config:
+    import:
+    - optional:configserver:http://cloud-config:8888
   application:
     name: cloud-gateway
   cloud:
