--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,22 +13,83 @@ services:
     networks: 
       - solar
   moon: 
-    image: barayathel/moon-service:v1
-    ports:
-      - 7700:7700
+    image: barayathel/moon-service
     depends_on: 
       - consul
+      - cloud-config
+    ports: 
+      - 7700:7700
     networks: 
       - solar
+    restart: on-failure
+
   planet: 
     image: barayathel/planet-service
-    ports: 
-      - 8700:8700
     depends_on:
       - consul
+      - cloud-config
     networks:
       - solar
+    restart: on-failure
 
+  aggregator:
+    image: barayathel/aggregator-service
+    depends_on: 
+      - consul
+      - planet
+      - moon 
+      - cloud-config
+    networks:
+      - solar
+    restart: on-failure
+
+  consumer: 
+    image: barayathel/consumer-service
+    depends_on: 
+      - consul
+      - planet
+      - moon 
+      - cloud-config
+    networks:
+      - solar
+    restart: on-failure
+
+  gateway: 
+    image: barayathel/cloud-gateway
+    ports: 
+      - 9000:9000
+    depends_on:
+      - consul
+      - cloud-config
+    networks: 
+      - solar
+    restart: on-failure
+
+  cloud-config:
+    image: barayathel/cloud-config
+    depends_on: 
+      - consul 
+    networks: 
+      - solar 
+    restart: on-failure
+
+  zipkin: 
+    image: openzipkin/zipkin 
+    ports: 
+      - 9411:9411
+    networks: 
+      - solar
+
+  prom: 
+    image: prom/prometheus
+    volumes: 
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+    ports: 
+      - 9090:9090
+  grafana: 
+    image: grafana/grafana
+    ports: 
+      - 3000:3000
 
 networks:
   solar:
