--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,8 @@ services:
     networks:
       - solar
     restart: on-failure
+    ports: 
+      - 8070:8070
 
   aggregator:
     image: barayathel/aggregator-service
@@ -86,11 +88,18 @@ services:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
     ports: 
       - 9090:9090
+    depends_on:
+    - planet
+    - moon
+    networks: 
+      - solar
+
   grafana: 
     image: grafana/grafana
     ports: 
       - 3000:3000
-
+    networks: 
+      - solar
 networks:
   solar:
         
